{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1334,
  "lineage": "1254737c-306e-46d9-1e09-0dbf5d8ac567",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:listener/app/simple-web-app-alb/2b7fe6173df1e48d/9e2b8e796c83f8d7",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:891377055161:certificate/096632b1-b3f1-4db8-954a-f453eb89a8b3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:targetgroup/simple-web-app-tg/2ea670e28baca29e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:listener/app/simple-web-app-alb/2b7fe6173df1e48d/9e2b8e796c83f8d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:loadbalancer/app/simple-web-app-alb/2b7fe6173df1e48d",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Environment": "dev",
              "Name": "simple-web-app-https-listener"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-web-app-https-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:listener/app/simple-web-app-alb/2b7fe6173df1e48d/9e2b8e796c83f8d7"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.ssl_cert",
            "module.acm.aws_acm_certificate_validation.ssl_cert_validation",
            "module.acm.aws_route53_record.cert_validation",
            "module.alb.aws_lb.simple-web-app-alb",
            "module.alb.aws_lb_listener.http_listener",
            "module.alb.aws_lb_target_group.simple-web-app-tg",
            "module.route53.aws_route53_record.main",
            "module.route53.aws_route53_zone.main",
            "module.route53.data.aws_route53_zone.existing",
            "module.security.aws_security_group.alb-sg",
            "module.security.aws_security_group.bastion-host-sg",
            "module.security.aws_security_group.ecs-cluster-sg",
            "module.security.aws_security_group.private-sg",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "simple-web-app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:loadbalancer/app/simple-web-app-alb/2b7fe6173df1e48d",
            "arn_suffix": "app/simple-web-app-alb/2b7fe6173df1e48d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "simple-web-app-alb-667122570.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:loadbalancer/app/simple-web-app-alb/2b7fe6173df1e48d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "simple-web-app-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0587daf8d70f4aebe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0907bdcd4c3e5d5f2"
              },
              {
                "subnet_id": "subnet-0d13c175538f5fdd1"
              }
            ],
            "subnets": [
              "subnet-0907bdcd4c3e5d5f2",
              "subnet-0d13c175538f5fdd1"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "simple-web-app-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-web-app-alb"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:loadbalancer/app/simple-web-app-alb/2b7fe6173df1e48d"
          },
          "dependencies": [
            "module.security.aws_security_group.alb-sg",
            "module.security.aws_security_group.bastion-host-sg",
            "module.security.aws_security_group.ecs-cluster-sg",
            "module.security.aws_security_group.private-sg",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:listener/app/simple-web-app-alb/2b7fe6173df1e48d/4d7111186658e26c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:targetgroup/simple-web-app-tg/2ea670e28baca29e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:listener/app/simple-web-app-alb/2b7fe6173df1e48d/4d7111186658e26c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:loadbalancer/app/simple-web-app-alb/2b7fe6173df1e48d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "simple-web-app-http-listener"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-web-app-http-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:listener/app/simple-web-app-alb/2b7fe6173df1e48d/4d7111186658e26c"
          },
          "dependencies": [
            "module.alb.aws_lb.simple-web-app-alb",
            "module.alb.aws_lb_target_group.simple-web-app-tg",
            "module.security.aws_security_group.alb-sg",
            "module.security.aws_security_group.bastion-host-sg",
            "module.security.aws_security_group.ecs-cluster-sg",
            "module.security.aws_security_group.private-sg",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "simple-web-app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:targetgroup/simple-web-app-tg/2ea670e28baca29e",
            "arn_suffix": "targetgroup/simple-web-app-tg/2ea670e28baca29e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:targetgroup/simple-web-app-tg/2ea670e28baca29e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:loadbalancer/app/simple-web-app-alb/2b7fe6173df1e48d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "simple-web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "simple-web-app-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "simple-web-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:891377055161:targetgroup/simple-web-app-tg/2ea670e28baca29e"
          },
          "dependencies": [
            "module.security.aws_security_group.alb-sg",
            "module.security.aws_security_group.bastion-host-sg",
            "module.security.aws_security_group.ecs-cluster-sg",
            "module.security.aws_security_group.private-sg",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:security-group/sg-0587daf8d70f4aebe",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0587daf8d70f4aebe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "d-alb-sg",
            "name_prefix": "",
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "d-alb-sg"
            },
            "tags_all": {
              "Name": "d-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:security-group/sg-06bd4f963ca1820f3",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bd4f963ca1820f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "171.252.155.223/32"
                ],
                "description": "SSH access from allowed IP ranges",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "d-bastion-host-sg",
            "name_prefix": "",
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "d-bastion-host-sg"
            },
            "tags_all": {
              "Name": "d-bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:security-group/sg-0bc2e0b72d57ef30c",
            "description": "Security group for ECS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc2e0b72d57ef30c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0587daf8d70f4aebe"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-cluster-sg",
            "name_prefix": "",
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-cluster-sg"
            },
            "tags_all": {
              "Name": "ecs-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb-sg",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:security-group/sg-028ae3b49dadea9f6",
            "description": "Security group for ansible",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028ae3b49dadea9f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH access from bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06bd4f963ca1820f3"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Open port for Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0587daf8d70f4aebe"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Open port for Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0587daf8d70f4aebe"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg"
            },
            "tags_all": {
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb-sg",
            "module.security.aws_security_group.bastion-host-sg",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:network-acl/acl-015e07a15c3d7c9e0",
            "default_network_acl_id": "acl-015e07a15c3d7c9e0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-015e07a15c3d7c9e0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "subnet_ids": [
              "subnet-0275ef71c19f053f5",
              "subnet-052e8e98dd0807da8",
              "subnet-0907bdcd4c3e5d5f2",
              "subnet-0d13c175538f5fdd1"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:route-table/rtb-060c59f2996d81601",
            "default_route_table_id": "rtb-060c59f2996d81601",
            "id": "rtb-060c59f2996d81601",
            "owner_id": "891377055161",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:security-group/sg-09152662eac3490b1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09152662eac3490b1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032fbc2243d4c412e",
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:elastic-ip/eipalloc-032fbc2243d4c412e",
            "association_id": "eipassoc-0dd8edaeb4cb83ad8",
            "domain": "vpc",
            "id": "eipalloc-032fbc2243d4c412e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0056476ffa77f1509",
            "private_dns": "ip-10-0-101-132.ap-southeast-1.compute.internal",
            "private_ip": "10.0.101.132",
            "public_dns": "ec2-13-213-141-121.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.141.121",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-ap-southeast-1a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:internet-gateway/igw-00bb5a588342c61b8",
            "id": "igw-00bb5a588342c61b8",
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032fbc2243d4c412e",
            "association_id": "eipassoc-0dd8edaeb4cb83ad8",
            "connectivity_type": "public",
            "id": "nat-0b62289cafa67dbb2",
            "network_interface_id": "eni-0056476ffa77f1509",
            "private_ip": "10.0.101.132",
            "public_ip": "13.213.141.121",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0907bdcd4c3e5d5f2",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-ap-southeast-1a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005e9131e332fd2c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b62289cafa67dbb2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-005e9131e332fd2c6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00bb5a588342c61b8",
            "id": "r-rtb-0bc334bb9ef1c54c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0bc334bb9ef1c54c3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:route-table/rtb-005e9131e332fd2c6",
            "id": "rtb-005e9131e332fd2c6",
            "owner_id": "891377055161",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b62289cafa67dbb2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:route-table/rtb-0bc334bb9ef1c54c3",
            "id": "rtb-0bc334bb9ef1c54c3",
            "owner_id": "891377055161",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bb5a588342c61b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b822c8aa0ae2b5f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-005e9131e332fd2c6",
            "subnet_id": "subnet-052e8e98dd0807da8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5ea5ce56d027807",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-005e9131e332fd2c6",
            "subnet_id": "subnet-0275ef71c19f053f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a15b14024d325100",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0bc334bb9ef1c54c3",
            "subnet_id": "subnet-0907bdcd4c3e5d5f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05354a2d99aa507bb",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0bc334bb9ef1c54c3",
            "subnet_id": "subnet-0d13c175538f5fdd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:subnet/subnet-052e8e98dd0807da8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052e8e98dd0807da8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377055161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:subnet/subnet-0275ef71c19f053f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0275ef71c19f053f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377055161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:subnet/subnet-0907bdcd4c3e5d5f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0907bdcd4c3e5d5f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377055161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:subnet/subnet-0d13c175538f5fdd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d13c175538f5fdd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377055161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09c4368e7bc6c24ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377055161:vpc/vpc-09c4368e7bc6c24ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015e07a15c3d7c9e0",
            "default_route_table_id": "rtb-060c59f2996d81601",
            "default_security_group_id": "sg-09152662eac3490b1",
            "dhcp_options_id": "dopt-066abb1de18b66006",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c4368e7bc6c24ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060c59f2996d81601",
            "owner_id": "891377055161",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "Name": "d-vpc-01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "d-vpc-01",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}